# r-exasol6

./: .gitignore  DESCRIPTION  NAMESPACE  README.md  configure  configure.ac
R/: exa.connect.R  exa.readData.R  exasol6.R
examples/: ex_exa_connect.R  ex_exa_readData.R
man/: exa.connect.Rd  exa.readData.Rd  exasol6-package.Rd
src/: Makevars.in  Makevars.win  R_exasockets.cpp
src/exasockets/: CMakeLists.txt  exaResultSet.cpp  exaResultSet.h  exasockets.cpp  exasockets.h  osname.h
src/websockets/: websockets.h
tests/: test_exa.connect.R
